アイコンのパスを修正

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
             name="viewport"
             content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0"
         >
-        <title>カラフルリバーシ 1.0.4</title>
-	    <link rel="icon" href="/icon.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <title>カラフルリバーシ 1.0.5</title>
+	    <link rel="icon" href="./icon.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
         <style>
 
 /* 横長 */
